@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Class Diagram - Password Hashing (SHA-256)

class "PasswordUtil" as PasswordUtil_0 {
  +sha256(rawPassword)
}

class "UserService" as UserService_1 {
  +createUser()
  +login()
  +resetPasswordByToken()
}

class "UserDao" as UserDao_2 {
  +createUser(passwordHash)
  +login(passwordHash)
  +updatePasswordByUserId()
}

class "UserCreateServlet" as UserCreateServlet_3 {
  +doPost()
}

class "ResetPasswordServlet" as ResetPasswordServlet_4 {
  +doPost()
}

UserCreateServlet_3 --> UserService_1 : createUser with raw password
ResetPasswordServlet_4 --> UserService_1 : resetPasswordByToken
UserService_1 --> PasswordUtil_0 : compute sha256 hash
UserService_1 --> UserDao_2 : store/query hash in DB
@enduml
